--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
-#canvas {
-  background-color: #38b5db;
-  border-radius: 20px;
-}
-
-.joystick{
-  float: right;
-}
-
 .hotBombPotato{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   
-  width: 360px;
+  /* width: 360px; */
 }
+
+#canvas {
+  background-color: #38b5db;
+  border-radius: 20px;
+  
+}
+
+.joystick{
+  margin: 20px;
+  /* background-color: black; */
+  width: 100px;
+}
+
+
